E1715: Fixing reports display alignment

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -851,7 +851,6 @@ span.help {
 			padding: 10px 0;
 		}
 		div.wrapper table.structure td.label {
-			width: 30%;
 			font-weight: bold;
 			color: #000;
 			white-space: nowrap;
